--- a/package.json
+++ b/package.json
@@ -178,7 +178,7 @@
     "pm2-axon-rpc": "0.5.0",
     "pm2-deploy": "^0.3.9",
     "pm2-multimeter": "^0.1.2",
-    "pmx": "~1.5.*",
+    "pmx": "keymetrics/pmx#development",
     "promptly": "2.2.0",
     "semver": "^5.3",
     "shelljs": "0.7.8",
