--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pm2",
   "preferGlobal": true,
-  "version": "2.10.0-beta",
+  "version": "2.10.0",
   "engines": {
     "node": ">=0.12"
   },
@@ -178,7 +178,7 @@
     "pm2-axon-rpc": "0.5.0",
     "pm2-deploy": "^0.3.9",
     "pm2-multimeter": "^0.1.2",
-    "pmx": "1.6.3-rc2",
+    "pmx": "^1.6",
     "promptly": "2.2.0",
     "semver": "^5.3",
     "shelljs": "0.7.8",
