--- a/package.json
+++ b/package.json
@@ -169,6 +169,7 @@
     "debug": "^3.0",
     "eventemitter2": "5.0.1",
     "fclone": "1.0.11",
+    "fs-extra": "^5.0.0",
     "mkdirp": "0.5.1",
     "moment": "^2.19",
     "needle": "^2.2.0",
