fix: add missing libraries in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,7 @@ os:
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install parallel
+  - sudo apt-get install python3
+  - sudo apt-get install php5-cli
 services:
   - docker
