--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /var/pm2
 ENV NODE_ENV test
 ENV PM2_DISCRETE_MODE true
 
-RUN apk update && apk add bash git curl python3 php5 && rm -rf /var/cache/apk/*
+RUN apk update && apk add bash git curl python python3 php5 && rm -rf /var/cache/apk/*
 RUN ln -s /usr/bin/php5 /usr/bin/php
 RUN npm install -g mocha@3.5
 
