--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
   "main": "index.js",
   "types": "types/index.d.ts",
   "scripts": {
-    "test": "node test/parallel.js"
+    "test": "bash test/e2e.sh && bash test/unit.sh"
   },
   "keywords": [
     "cli",
@@ -163,6 +163,7 @@
     "chalk": "^2.3.1",
     "chokidar": "^2.0.2",
     "cli-table-redemption": "^1.0.0",
+    "coffee-script": "^1.12.7",
     "commander": "2.14.1",
     "cron": "^1.3",
     "debug": "^3.0",
