chore: update changelog

--- a/.changelogrc
+++ b/.changelogrc
@@ -2,10 +2,10 @@
     "app_name": "",
     "logo": "",
     "intro": "",
-    "branch" : "development",
+    "branch" : "master",
     "repo_url": "https://github.com/Unitech/pm2",
-    "version_name" : "v2.10.1",
-    "tag": "2.10.0",
+    "version_name" : "v2.10.2",
+    "tag": "2.10.1",
     "file": "currentTagChangelog.md",
     "template": "changelogTemplate.md",
     "sections": [
