--- a/package.json
+++ b/package.json
@@ -175,7 +175,7 @@
     "nssocket": "0.6.0",
     "pidusage": "^1.2.0",
     "pm2-axon": "3.1.0",
-    "pm2-axon-rpc": "0.5.0",
+    "pm2-axon-rpc": "^0.5.1",
     "pm2-deploy": "^0.3.9",
     "pm2-multimeter": "^0.1.2",
     "pmx": "^1.6",
