--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
     "pm2-runtime": "./bin/pm2-runtime"
   },
   "dependencies": {
+    "@keymetrics/pmx": "^2.0.0-alpha9",
     "async": "^2.5",
     "blessed": "^0.1.81",
     "chalk": "^2.3.1",
@@ -179,7 +180,6 @@
     "pm2-axon-rpc": "^0.5.1",
     "pm2-deploy": "^0.3.9",
     "pm2-multimeter": "^0.1.2",
-    "pmx": "^1.6",
     "promptly": "2.2.0",
     "semver": "^5.3",
     "shelljs": "0.8.1",
