chore: upgrade all modules + keymetrics-agent -> pm2/agent + increase version enabling v8-compile-cache

--- a/package.json
+++ b/package.json
@@ -159,20 +159,20 @@
   },
   "dependencies": {
     "@pm2/io": "latest",
-    "async": "^2.5",
+    "@pm2/agent": "^0.4.0",
+    "async": "^2.6",
     "blessed": "^0.1.81",
-    "chalk": "^2.3.1",
-    "chokidar": "^2.0.2",
+    "chalk": "^2.4.1",
+    "chokidar": "^2.0.3",
     "cli-table-redemption": "^1.0.0",
-    "commander": "2.14.1",
+    "commander": "2.15.1",
     "cron": "^1.3",
-    "debug": "^3.0",
+    "debug": "^3.1",
     "eventemitter2": "5.0.1",
     "fclone": "1.0.11",
     "fs-extra": "^5.0.0",
-    "keymetrics-agent": "^0.4.0",
     "mkdirp": "0.5.1",
-    "moment": "^2.19",
+    "moment": "^2.22",
     "needle": "^2.2.0",
     "nssocket": "0.6.0",
     "pidusage": "^2.0.6",
@@ -181,12 +181,12 @@
     "pm2-deploy": "^0.3.9",
     "pm2-multimeter": "^0.1.2",
     "promptly": "2.2.0",
-    "semver": "^5.3",
-    "shelljs": "0.8.1",
+    "semver": "^5.5",
+    "shelljs": "~0.8.2",
     "source-map-support": "^0.5",
     "sprintf-js": "1.1.1",
-    "v8-compile-cache": "^1.1.0",
-    "vizion": "0.2.0",
+    "v8-compile-cache": "^2.0.0",
+    "vizion": "~0.2.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
