--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
   "dependencies": {
     "@pm2/agent": "latest",
     "@pm2/io": "latest",
+    "@pm2/js-api": "^0.5.11",
     "async": "^2.6",
     "blessed": "^0.1.81",
     "chalk": "^2.4.1",
@@ -172,7 +173,6 @@
     "fclone": "1.0.11",
     "mkdirp": "0.5.1",
     "moment": "^2.22",
-    "needle": "^2.2.0",
     "nssocket": "0.6.0",
     "pidusage": "^2.0.6",
     "pm2-axon": "3.1.0",
