--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pm2",
   "preferGlobal": true,
-  "version": "3.0.0-alpha1",
+  "version": "3.0.0",
   "engines": {
     "node": ">=4.0.0"
   },
@@ -158,39 +158,41 @@
     "pm2-runtime": "./bin/pm2-runtime"
   },
   "dependencies": {
-    "@pm2/agent": "latest",
-    "@pm2/io": "latest",
-    "@pm2/js-api": "latest",
-    "async": "^2.6",
+    "@pm2/agent": "^0.5.4",
+    "@pm2/io": "^2.0.2",
+    "@pm2/js-api": "^0.5.15",
+    "async": "^2.6.1",
     "blessed": "^0.1.81",
     "chalk": "^2.4.1",
-    "chokidar": "^2.0.3",
+    "chokidar": "^2.0.4",
     "cli-table-redemption": "^1.0.0",
+    "coffee-script": "^1.12.7",
     "commander": "2.15.1",
     "cron": "^1.3",
     "debug": "^3.1",
     "eventemitter2": "5.0.1",
     "fclone": "1.0.11",
     "mkdirp": "0.5.1",
-    "moment": "^2.22",
-    "needle": "^2.2.0",
+    "moment": "^2.22.2",
+    "needle": "^2.2.1",
     "nssocket": "0.6.0",
     "pidusage": "^2.0.6",
-    "pm2-axon": "3.1.0",
+    "pm2-axon": "3.3.0",
     "pm2-axon-rpc": "^0.5.1",
     "pm2-deploy": "^0.3.9",
+    "pm2-logrotate": "^2.6.0",
     "pm2-multimeter": "^0.1.2",
-    "promptly": "2.2.0",
+    "promptly": "3.0.3",
     "semver": "^5.5",
     "shelljs": "~0.8.2",
-    "source-map-support": "^0.5",
+    "source-map-support": "^0.5.6",
     "sprintf-js": "1.1.1",
     "v8-compile-cache": "^2.0.0",
     "vizion": "~0.2.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "mocha": "^3.5",
+    "mocha": "^5.2.0",
     "should": "^13"
   },
   "optionalDependencies": {
