--- a/package.json
+++ b/package.json
@@ -166,7 +166,7 @@
     "chalk": "^2.4.1",
     "chokidar": "^2.0.4",
     "cli-table-redemption": "^1.0.0",
-    "coffee-script": "^1.12.7",
+    "coffeescript": "^2.3.1",
     "commander": "2.15.1",
     "cron": "^1.3",
     "debug": "^3.1",
