--- a/package.json
+++ b/package.json
@@ -187,7 +187,7 @@
     "source-map-support": "^0.5.6",
     "sprintf-js": "1.1.1",
     "v8-compile-cache": "^2.0.0",
-    "vizion": "~0.2.0",
+    "vizion": "2.0.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
