--- a/package.json
+++ b/package.json
@@ -186,7 +186,7 @@
     "source-map-support": "^0.5.6",
     "sprintf-js": "1.1.1",
     "v8-compile-cache": "^2.0.0",
-    "vizion": "2.0.2",
+    "vizion": "~2.0.2",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
