refactor + fix bug watch_delay on json + add user mgmt tests + change tests order/remove toxic flag

--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
   "main": "index.js",
   "types": "types/index.d.ts",
   "scripts": {
-    "test": "bash test/e2e.sh && bash test/unit.sh"
+    "test": "bash test/unit.sh && bash test/e2e.sh"
   },
   "keywords": [
     "cli",
