--- a/package.json
+++ b/package.json
@@ -168,6 +168,7 @@
     "cli-table-redemption": "^1.0.0",
     "commander": "2.15.1",
     "cron": "^1.3",
+    "date-fns": "^1.29.0",
     "debug": "^3.1",
     "eventemitter2": "5.0.1",
     "fclone": "1.0.11",
