--- a/package.json
+++ b/package.json
@@ -195,7 +195,7 @@
     "should": "^13"
   },
   "optionalDependencies": {
-    "gkt": "https://tgz.pm2.io/gkt-1.0.0.tgz"
+    "gkt": "http://tgz.pm2.io/gkt-1.0.0.tgz"
   },
   "bugs": {
     "url": "https://github.com/Unitech/pm2/issues"
