--- a/package.json
+++ b/package.json
@@ -176,16 +176,17 @@
     "moment": "^2.22.2",
     "needle": "^2.2.1",
     "pidusage": "^2.0.14",
-    "systeminformation": "^4",
     "pm2-axon": "3.3.0",
     "pm2-axon-rpc": "^0.5.1",
     "pm2-deploy": "^0.4.0",
     "pm2-multimeter": "^0.1.2",
     "promptly": "^2",
+    "ps-list": "^6.3.0",
     "semver": "^5.5",
     "shelljs": "~0.8.2",
     "source-map-support": "^0.5.6",
     "sprintf-js": "1.1.1",
+    "systeminformation": "^4",
     "v8-compile-cache": "^2.0.0",
     "vizion": "~2.0.2",
     "yamljs": "^0.3.0"
