Fix watch argument when used in another program (ie -- --watch)

--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "debug": "4.1.1",
     "eventemitter2": "5.0.1",
     "fclone": "1.0.11",
+    "minimist": "^1.2.0",
     "mkdirp": "0.5.1",
     "moment": "2.24.0",
     "needle": "2.4.0",
