--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pm2",
   "preferGlobal": true,
-  "version": "4.0.0-beta-9",
+  "version": "4.0.0",
   "engines": {
     "embed": "12.4.0",
     "node": ">=8.0.0"
@@ -165,7 +165,7 @@
     "async": "^3.1.0",
     "blessed": "0.1.81",
     "chalk": "2.4.2",
-    "chokidar": "^3.1.0",
+    "chokidar": "^3.2.0",
     "cli-table-redemption": "1.0.1",
     "commander": "2.15.1",
     "cron": "1.7.1",
@@ -188,7 +188,7 @@
     "shelljs": "0.8.3",
     "source-map-support": "0.5.12",
     "sprintf-js": "1.1.2",
-    "systeminformation": "^4.14.4",
+    "systeminformation": "^4.14.11",
     "vizion": "~2.0.2",
     "yamljs": "0.3.0"
   },
