fix: make systeminformation as optional module #4457

--- a/package.json
+++ b/package.json
@@ -193,13 +193,15 @@
     "shelljs": "0.8.3",
     "source-map-support": "0.5.12",
     "sprintf-js": "1.1.2",
-    "systeminformation": "^4.14.11",
     "vizion": "~2.0.2",
     "yamljs": "0.3.0"
   },
   "devDependencies": {
     "mocha": "^5.2.0",
     "should": "^13"
+  },
+  "optionalDependencies": {
+    "systeminformation": "^4.14.11"
   },
   "bugs": {
     "url": "https://github.com/Unitech/pm2/issues"
