chore: update changelog + add @bvsubhash as contributor

--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
       "email": "soyuka@gmail.com"
     },
     {
+      "name": "Subhash Burramsetty"
+    },
+    {
       "name": "Valentin Marchaud",
       "email": "thisismac47@gmail.com"
     },
