--- a/package.json
+++ b/package.json
@@ -181,7 +181,7 @@
     "eventemitter2": "5.0.1",
     "fclone": "1.0.11",
     "mkdirp": "0.5.1",
-    "moment": "2.24.0",
+    "dayjs": "1.8.17",
     "needle": "2.4.0",
     "pidusage": "2.0.17",
     "pm2-axon": "3.3.0",
