--- a/package.json
+++ b/package.json
@@ -169,6 +169,7 @@
     "@pm2/agent": "^0.5.26",
     "@pm2/io": "^4.3.2",
     "@pm2/js-api": "^0.5.60",
+    "@pm2/pm2-version-check": "latest",
     "async": "^3.1.0",
     "blessed": "0.1.81",
     "chalk": "2.4.2",
@@ -178,8 +179,10 @@
     "cron": "1.7.1",
     "date-fns": "1.30.1",
     "debug": "4.1.1",
+    "enquirer": "^2.3.2",
     "eventemitter2": "5.0.1",
     "fclone": "1.0.11",
+    "lodash": "4.17.14",
     "mkdirp": "0.5.1",
     "moment": "2.24.0",
     "needle": "2.4.0",
@@ -189,8 +192,6 @@
     "pm2-deploy": "^0.4.0",
     "pm2-multimeter": "^0.1.2",
     "promptly": "^2",
-    "enquirer": "^2.3.2",
-    "lodash": "4.17.14",
     "ps-list": "6.3.0",
     "semver": "^5.5",
     "shelljs": "0.8.3",
