--- a/package.json
+++ b/package.json
@@ -167,7 +167,7 @@
   },
   "dependencies": {
     "@pm2/agent": "^0.5.26",
-    "@pm2/io": "^4.3.2",
+    "@pm2/io": "^4.3.4-beta.0",
     "@pm2/js-api": "^0.5.60",
     "@pm2/pm2-version-check": "latest",
     "async": "^3.2.0",
