--- a/package.json
+++ b/package.json
@@ -166,11 +166,11 @@
     "pm2-runtime": "./bin/pm2-runtime"
   },
   "dependencies": {
-    "@pm2/agent": "^0.5.26",
-    "@pm2/io": "^4.3.4-beta.0",
-    "@pm2/js-api": "^0.5.60",
+    "@pm2/agent": "~1.0.0",
+    "@pm2/io": "~4.3.4",
+    "@pm2/js-api": "~0.5.6",
     "@pm2/pm2-version-check": "latest",
-    "async": "^3.2.0",
+    "async": "~3.2.0",
     "blessed": "0.1.81",
     "chalk": "3.0.0",
     "chokidar": "^3.3.0",
@@ -203,7 +203,7 @@
     "should": "^13"
   },
   "optionalDependencies": {
-    "systeminformation": "^4.14.16"
+    "systeminformation": "^4.23.3"
   },
   "bugs": {
     "url": "https://github.com/Unitech/pm2/issues"
