--- a/package.json
+++ b/package.json
@@ -187,7 +187,7 @@
     "pidusage": "2.0.18",
     "pm2-axon": "3.3.0",
     "pm2-axon-rpc": "0.5.1",
-    "pm2-deploy": "^0.4.0",
+    "pm2-deploy": "~1.0.2",
     "pm2-multimeter": "^0.1.2",
     "promptly": "^2",
     "ps-list": "6.3.0",
