--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pm2",
   "preferGlobal": true,
-  "version": "4.3.0-beta.1",
+  "version": "4.3.0",
   "engines": {
     "node": ">=8.10.0"
   },
