--- a/package.json
+++ b/package.json
@@ -174,12 +174,12 @@
     "blessed": "0.1.81",
     "chalk": "3.0.0",
     "chokidar": "^3.3.0",
-    "cli-table-redemption": "1.0.1",
+    "cli-table-redemption": "2.0.0",
     "commander": "2.15.1",
     "cron": "1.8.2",
     "dayjs": "1.8.24",
     "debug": "4.1.1",
-    "enquirer": "^2.3.2",
+    "enquirer": "2.3.5",
     "eventemitter2": "5.0.1",
     "fclone": "1.0.11",
     "mkdirp": "1.0.4",
