--- a/package.json
+++ b/package.json
@@ -174,7 +174,7 @@
     "blessed": "0.1.81",
     "chalk": "3.0.0",
     "chokidar": "^3.3.0",
-    "cli-table-redemption": "2.0.0",
+    "cli-tableau": "^2.0.0",
     "commander": "2.15.1",
     "cron": "1.8.2",
     "dayjs": "1.8.24",
