--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pm2",
   "preferGlobal": true,
-  "version": "4.3.0",
+  "version": "4.3.1",
   "engines": {
     "node": ">=8.10.0"
   },
@@ -195,7 +195,7 @@
     "shelljs": "0.8.3",
     "source-map-support": "0.5.16",
     "sprintf-js": "1.1.2",
-    "vizion": "~2.2.0",
+    "vizion": "0.2.13",
     "yamljs": "0.3.0"
   },
   "devDependencies": {
