fixes for node 14 + shelljs

--- a/package.json
+++ b/package.json
@@ -192,7 +192,7 @@
     "promptly": "^2",
     "ps-list": "6.3.0",
     "semver": "^7.2",
-    "shelljs": "0.8.3",
+    "shelljs": "shelljs/shelljs",
     "source-map-support": "0.5.16",
     "sprintf-js": "1.1.2",
     "vizion": "0.2.13",
