--- a/package.json
+++ b/package.json
@@ -168,7 +168,7 @@
   "dependencies": {
     "@pm2/agent": "~1.0.2",
     "@pm2/io": "~4.3.5",
-    "@pm2/js-api": "~0.5.6",
+    "@pm2/js-api": "~0.6.0",
     "@pm2/pm2-version-check": "latest",
     "async": "~3.2.0",
     "blessed": "0.1.81",
@@ -177,7 +177,7 @@
     "cli-tableau": "^2.0.0",
     "commander": "2.15.1",
     "cron": "1.8.2",
-    "dayjs": "1.8.24",
+    "dayjs": "~1.8.25",
     "debug": "4.1.1",
     "enquirer": "2.3.5",
     "eventemitter2": "5.0.1",
