--- a/package.json
+++ b/package.json
@@ -178,21 +178,21 @@
     "commander": "2.15.1",
     "cron": "1.8.2",
     "dayjs": "~1.8.25",
-    "debug": "4.1.1",
-    "enquirer": "2.3.5",
+    "debug": "^4.2.0",
+    "enquirer": "2.3.6",
     "eventemitter2": "5.0.1",
     "fclone": "1.0.11",
     "mkdirp": "1.0.4",
     "needle": "2.4.0",
-    "pidusage": "2.0.18",
-    "pm2-axon": "3.3.0",
-    "pm2-axon-rpc": "0.5.1",
+    "pidusage": "2.0.21",
+    "pm2-axon": "4.0.0",
+    "pm2-axon-rpc": "0.6.0",
     "pm2-deploy": "~1.0.2",
     "pm2-multimeter": "^0.1.2",
     "promptly": "^2",
     "ps-list": "6.3.0",
     "semver": "^7.2",
-    "source-map-support": "0.5.16",
+    "source-map-support": "0.5.19",
     "sprintf-js": "1.1.2",
     "vizion": "0.2.13",
     "yamljs": "0.3.0"
