upgrade to vizion 2.2.0

--- a/package.json
+++ b/package.json
@@ -194,7 +194,7 @@
     "semver": "^7.2",
     "source-map-support": "0.5.19",
     "sprintf-js": "1.1.2",
-    "vizion": "0.2.13",
+    "vizion": "~2.2.0",
     "yamljs": "0.3.0"
   },
   "devDependencies": {
