--- a/package.json
+++ b/package.json
@@ -166,7 +166,7 @@
     "pm2-runtime": "bin/pm2-runtime"
   },
   "dependencies": {
-    "@pm2/agent": "~1.0.4",
+    "@pm2/agent": "keymetrics/pm2-io-agent#development",
     "@pm2/io": "~4.3.5",
     "@pm2/js-api": "~0.6.7",
     "@pm2/pm2-version-check": "latest",
