feature: auto start pm2-sysmonit - allow to disable via pm2 set pm2:sysmonit false

--- a/package.json
+++ b/package.json
@@ -190,6 +190,7 @@
     "pm2-axon-rpc": "0.6.0",
     "pm2-deploy": "~1.0.2",
     "pm2-multimeter": "^0.1.2",
+    "pm2-sysmonit": "^1.2.3",
     "promptly": "^2",
     "ps-list": "6.3.0",
     "semver": "^7.2",
