--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pm2",
   "preferGlobal": true,
-  "version": "4.5.5",
+  "version": "4.5.6",
   "engines": {
     "node": ">=8.10.0"
   },
@@ -166,8 +166,8 @@
     "pm2-runtime": "bin/pm2-runtime"
   },
   "dependencies": {
-    "@pm2/agent": "~1.0.4",
-    "@pm2/io": "~4.3.5",
+    "@pm2/agent": "~1.0.8",
+    "@pm2/io": "~5.0.0",
     "@pm2/js-api": "~0.6.7",
     "@pm2/pm2-version-check": "latest",
     "async": "~3.2.0",
@@ -185,8 +185,8 @@
     "mkdirp": "1.0.4",
     "needle": "2.4.0",
     "pidusage": "2.0.21",
-    "pm2-axon": "4.0.0",
-    "pm2-axon-rpc": "0.6.0",
+    "pm2-axon": "~4.0.1",
+    "pm2-axon-rpc": "~0.7.0",
     "pm2-deploy": "~1.0.2",
     "pm2-multimeter": "^0.1.2",
     "promptly": "^2",
