--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "preferGlobal": true,
   "version": "5.0.0",
   "engines": {
-    "node": ">=10.0.0"
+    "node": ">=12.0.0"
   },
   "directories": {
     "bin": "./bin",
@@ -190,13 +190,14 @@
     "pm2-axon-rpc": "~0.7.1",
     "pm2-deploy": "~1.0.2",
     "pm2-multimeter": "^0.1.2",
-    "pm2-sysmonit": "^1.2.3",
     "promptly": "^2",
-    "ps-list": "6.3.0",
     "semver": "^7.2",
     "source-map-support": "0.5.19",
     "vizion": "~2.2.1",
     "yamljs": "0.3.0"
+  },
+  "optionalDependencies": {
+    "pm2-sysmonit": "^1.2.6"
   },
   "devDependencies": {
     "mocha": "^8.3.2",
