--- a/package.json
+++ b/package.json
@@ -185,7 +185,7 @@
     "fclone": "1.0.11",
     "mkdirp": "1.0.4",
     "needle": "2.4.0",
-    "pidusage": "2.0.21",
+    "pidusage": "~3.0",
     "pm2-axon": "~4.0.1",
     "pm2-axon-rpc": "~0.7.1",
     "pm2-deploy": "~1.0.2",
