--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
   "main": "index.js",
   "types": "types/index.d.ts",
   "scripts": {
+    "lint": "eslint .",
     "test": "bash test/unit.sh && bash test/e2e.sh"
   },
   "keywords": [
@@ -181,7 +182,6 @@
     "debug": "^4.3.1",
     "enquirer": "2.3.6",
     "eventemitter2": "5.0.1",
-    "sprintf-js": "1.1.2",
     "fclone": "1.0.11",
     "mkdirp": "1.0.4",
     "needle": "2.4.0",
@@ -193,6 +193,7 @@
     "promptly": "^2",
     "semver": "^7.2",
     "source-map-support": "0.5.19",
+    "sprintf-js": "1.1.2",
     "vizion": "~2.2.1",
     "yamljs": "0.3.0"
   },
@@ -200,6 +201,7 @@
     "pm2-sysmonit": "^1.2.8"
   },
   "devDependencies": {
+    "eslint": "^8.7.0",
     "mocha": "^8.3.2",
     "should": "^13.2.3"
   },
