--- a/package.json
+++ b/package.json
@@ -177,6 +177,7 @@
     "cli-tableau": "^2.0.0",
     "commander": "2.15.1",
     "node-schedule": "^2.0.0",
+    "cron-parser": "~3.5.0",
     "dayjs": "~1.8.25",
     "debug": "^4.3.1",
     "enquirer": "2.3.6",
