--- a/package.json
+++ b/package.json
@@ -177,8 +177,8 @@
     "cli-tableau": "^2.0.0",
     "coffee-script": "^1.12.7",
     "commander": "2.15.1",
-    "croner": "~4.1.92",
     "dayjs": "~1.11.5",
+    "croner": "^5.0.3",
     "debug": "^4.3.1",
     "enquirer": "2.3.6",
     "eventemitter2": "5.0.1",
