--- a/package.json
+++ b/package.json
@@ -173,15 +173,15 @@
     "async": "~3.2.0",
     "blessed": "0.1.81",
     "chalk": "3.0.0",
-    "chokidar": "^3.5.1",
+    "chokidar": "^3.5.3",
     "cli-tableau": "^2.0.0",
+    "coffee-script": "^1.12.7",
     "commander": "2.15.1",
     "croner": "~4.1.92",
-    "dayjs": "~1.8.25",
+    "dayjs": "~1.11.5",
     "debug": "^4.3.1",
     "enquirer": "2.3.6",
     "eventemitter2": "5.0.1",
-    "sprintf-js": "1.1.2",
     "fclone": "1.0.11",
     "mkdirp": "1.0.4",
     "needle": "2.4.0",
@@ -192,7 +192,8 @@
     "pm2-multimeter": "^0.1.2",
     "promptly": "^2",
     "semver": "^7.2",
-    "source-map-support": "0.5.19",
+    "source-map-support": "0.5.21",
+    "sprintf-js": "1.1.2",
     "vizion": "~2.2.1",
     "yamljs": "0.3.0"
   },
