--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
   "scripts": {
     "test:unit": "bash test/unit.sh",
     "test:e2e": "bash test/e2e.sh",
-    "test": "bash test/unit.sh && bash test/e2e.sh"
+    "test": "bash test/unit.sh && bash test/e2e.sh",
+    "preinstall": "node ./preinstall.js"
   },
   "keywords": [
     "cli",
