--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "test:unit": "bash test/unit.sh",
     "test:e2e": "bash test/e2e.sh",
     "test": "bash test/unit.sh && bash test/e2e.sh",
-    "postinstall": "node ./preinstall.js"
+    "postinstall": "node preinstall.js"
   },
   "keywords": [
     "cli",
