--- a/package.json
+++ b/package.json
@@ -176,11 +176,11 @@
     "async": "~3.2.6",
     "blessed": "0.1.81",
     "chalk": "3.0.0",
-    "chokidar": "^3.5.3",
+    "chokidar": "~4.0.3",
     "cli-tableau": "^2.0.0",
     "commander": "2.15.1",
     "croner": "~4.1.92",
-    "dayjs": "~1.11.5",
+    "dayjs": "~1.11.13",
     "debug": "^4.3.7",
     "enquirer": "2.3.6",
     "eventemitter2": "5.0.1",
