windows: test prebin

--- a/package.json
+++ b/package.json
@@ -101,8 +101,7 @@
   "scripts": {
     "test:unit": "bash test/unit.sh",
     "test:e2e": "bash test/e2e.sh",
-    "test": "bash test/unit.sh && bash test/e2e.sh",
-    "preinstall": "node ./preinstall.js"
+    "test": "bash test/unit.sh && bash test/e2e.sh"
   },
   "keywords": [
     "cli",
