--- a/package.json
+++ b/package.json
@@ -163,7 +163,7 @@
   ],
   "bin": {
     "pm2": "bin/pm2",
-    "pm2.ps1": "bin/pm2.ps1",
+    "pm2.cmd": "bin/pm2-windows",
     "pm2-dev": "bin/pm2-dev",
     "pm2-docker": "bin/pm2-docker",
     "pm2-runtime": "bin/pm2-runtime"
