chore: update dependencies to latest stable versions

--- a/package.json
+++ b/package.json
@@ -174,27 +174,27 @@
     "@pm2/pm2-version-check": "latest",
     "async": "~3.2.6",
     "blessed": "0.1.81",
-    "chalk": "3.0.0",
+    "chalk": "4.1.2",
     "chokidar": "^3.5.3",
     "cli-tableau": "^2.0.0",
-    "commander": "2.15.1",
+    "commander": "^11.1.0",
     "croner": "~4.1.92",
     "dayjs": "~1.11.13",
     "debug": "^4.3.7",
     "enquirer": "2.3.6",
-    "eventemitter2": "5.0.1",
+    "eventemitter2": "6.4.9",
     "fclone": "1.0.11",
-    "mkdirp": "1.0.4",
-    "needle": "2.4.0",
+    "mkdirp": "3.0.1",
+    "needle": "3.3.1",
     "pidusage": "~3.0",
     "pm2-axon": "~4.0.1",
     "pm2-axon-rpc": "~0.7.1",
     "pm2-deploy": "~1.0.2",
     "pm2-multimeter": "^0.1.2",
-    "promptly": "^2",
+    "promptly": "^3.2.0",
     "semver": "^7.6.2",
     "source-map-support": "0.5.21",
-    "sprintf-js": "1.1.2",
+    "sprintf-js": "1.1.3",
     "vizion": "~2.2.1",
     "js-yaml": "~4.1.0"
   },
