--- a/package.json
+++ b/package.json
@@ -172,7 +172,7 @@
     "@pm2/js-api": "~0.8.0",
     "@pm2/io": "~6.1.0",
     "@pm2/pm2-version-check": "latest",
-    "ansis": "4.0.0",
+    "ansis": "4.0.0-node10",
     "async": "~3.2.6",
     "blessed": "0.1.81",
     "chokidar": "^3.5.3",
