--- a/package.json
+++ b/package.json
@@ -203,7 +203,8 @@
   },
   "devDependencies": {
     "mocha": "^10.8.0",
-    "should": "^13.2.3"
+    "should": "^13.2.3",
+    "chai": "~6.0.1"
   },
   "bugs": {
     "url": "https://github.com/Unitech/pm2/issues"
