#6034 add npm shrinkwrap

--- a/package.json
+++ b/package.json
@@ -101,7 +101,10 @@
   "scripts": {
     "test:unit": "bash test/unit.sh",
     "test:e2e": "bash test/e2e.sh",
-    "test": "bash test/unit.sh && bash test/e2e.sh"
+    "test": "bash test/unit.sh && bash test/e2e.sh",
+    "shrinkwrap": "npm shrinkwrap",
+    "prepublishOnly": "npm run shrinkwrap",
+    "postpublish": "rm -f npm-shrinkwrap.json"
   },
   "keywords": [
     "cli",
