--- a/package.json
+++ b/package.json
@@ -101,10 +101,7 @@
   "scripts": {
     "test:unit": "bash test/unit.sh",
     "test:e2e": "bash test/e2e.sh",
-    "test": "bash test/unit.sh && bash test/e2e.sh",
-    "shrinkwrap": "npm shrinkwrap",
-    "prepublishOnly": "npm run shrinkwrap",
-    "postpublish": "rm -f npm-shrinkwrap.json"
+    "test": "bash test/unit.sh && bash test/e2e.sh"
   },
   "keywords": [
     "cli",
