drop npm-shrinkwrap + add package-lock + pin exact dependency version

--- a/package.json
+++ b/package.json
@@ -173,30 +173,33 @@
     "@pm2/io": "~6.1.0",
     "@pm2/pm2-version-check": "latest",
     "ansis": "4.0.0-node10",
-    "async": "~3.2.6",
+    "async": "3.2.6",
     "blessed": "0.1.81",
-    "chokidar": "^3.5.3",
-    "cli-tableau": "^2.0.0",
+    "chokidar": "3.6.0",
+    "cli-tableau": "2.0.1",
     "commander": "2.15.1",
-    "croner": "~4.1.92",
-    "dayjs": "~1.11.13",
-    "debug": "^4.3.7",
+    "croner": "4.1.97",
+    "dayjs": "1.11.15",
+    "debug": "4.4.1",
     "enquirer": "2.3.6",
     "eventemitter2": "5.0.1",
     "fclone": "1.0.11",
     "mkdirp": "1.0.4",
     "needle": "2.4.0",
-    "pidusage": "~3.0",
+    "pidusage": "3.0.2",
     "pm2-axon": "~4.0.1",
     "pm2-axon-rpc": "~0.7.1",
     "pm2-deploy": "~1.0.2",
     "pm2-multimeter": "^0.1.2",
-    "promptly": "^2",
-    "semver": "^7.6.2",
+    "promptly": "2.2.0",
+    "semver": "7.7.2",
     "source-map-support": "0.5.21",
     "sprintf-js": "1.1.2",
     "vizion": "~2.2.1",
-    "js-yaml": "~4.1.0"
+    "js-yaml": "4.1.0"
+  },
+  "overrides": {
+    "debug": "4.4.3"
   },
   "optionalDependencies": {
     "pm2-sysmonit": "^1.2.8"
